# balthazar

./: Cargo.toml  README.md  docker-compose.yaml  flake.nix
.github/workflows/: ci.yml
examples/: basic.rs
src/: build_info.rs  core.rs  database.rs  health_status.rs  lang.rs  lib.rs  postgres.rs  prelude.rs  redis.rs  timeable.rs  trace.rs  tracing.rs
src/streaming/: kafka_client.rs  kafka_config.rs  message.rs  mod.rs  streaming_client.rs
src/test_utils/mocks/: mod.rs  streaming_client_mock.rs
tests/: eyre_test.rs  test_kafka.rs
