[package]
name = "balthazar"
version = "0.0.1"
edition = "2021"

[dependencies]

# lang
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.1", features = ["derive", "env", "wrap_help"] }
color-eyre = "0.6"
eyre = "0.6"
once_cell = "1.17.1"
quickcheck = "1.0"
strum = { version = "0.24", features = ["derive"] }
time = { version = "0.3", features = ["quickcheck", "serde", "serde-well-known"] }
uuid = { version = "1.3", features = ["serde", "v4"] }

# async
async-trait = "0.1"
futures-util = "0.3"

# web / http
axum = { version = "0.6", features = ["headers"] }
http = "0.2"
reqwest = "0.11"
reqwest-middleware = "0.2"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros", "tracing", "signal"] }
tower-http = { version = "0.4", features = ["trace", "request-id"] }

# eth
ethereum-types = "0.14"

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# tracing / observability
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.17", features = ["rt-tokio", "collector_client", "reqwest_collector_client"] }
tracing = "0.1"
tracing-opentelemetry = "0.18"
tracing-serde = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-tree = "0.2"
sentry = "0.31"
sentry-tracing = { version = "0.31", optional = true }
metrics = "0.21"

# build
vergen = { version = "8.3.1" }

# database
sqlx = { optional = true, version = "0.6" }
postgres = { optional = true, version = "0.19" }

# redis
bb8-redis = { optional = true, version = "0.13.1" }

# streaming
rdkafka = { version = "0.30.0", features = ["cmake_build", "ssl"], optional = true }
base64 = { version = "0.21", optional = true }

[features]
postgres = [
    "dep:postgres",
    "sqlx",
    "sqlx/postgres",
    "sqlx/runtime-tokio-rustls",
    "sqlx/uuid",
    "sqlx/time",
    "sqlx/offline"
]
postgres-offline = [
    "sqlx/offline"
]
redis = [
    "bb8-redis"
]
sentry = [
    "sentry-tracing"
]
streaming = [
    "rdkafka",
    "base64"
]
